--- a/src/single.html
+++ b/src/single.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<form action="/action.php">
+<form action="/action.php" method="post">
   <label for="name">First name:</label>
-  <input type="text" id="name" name="fname"><br><br>
+  <input type="text" id="name" name="name"><br><br>
   <input type="submit" value="Submit">
 </form>
 
