--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <body>
 
 <form action="/action.php" method="post">
-  <label for="name">First name:</label>
+  <label for="name">Search:</label>
   <input type="text" id="name" name="name"><br><br>
-  <input type="submit" value="Submit">
+  <button type="submit" value="Search">
 </form>
 
 </body>
