--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <form action="/action.php" method="post">
   <label for="name">Search:</label>
   <input type="text" id="name" name="name"><br><br>
-  <button type="submit" value="Search">
+  <button type="submit" value="Search"> Search </button>
 </form>
 
 </body>
